@startuml TVU_Fund_Database

skinparam {
  BackgroundColor #F0F4FF
  EntityBackgroundColor #FFFFFF
  EntityBorderColor #1a2f5e
  EntityFontColor #1a2f5e
  EntityFontSize 13
  EntityFontStyle bold
  ArrowColor #f0a500
  ArrowFontColor #1a2f5e
  ArrowFontSize 11
  NoteBorderColor #f0a500
  NoteBackgroundColor #FFF8E7
}

' ==================== BẢNG VAI TRÒ ====================
entity "vaitro" as vaitro #E8EDF8 {
  * role_id       : INT           <<PK, AI>>
  --
  ten_vai_tro     : VARCHAR(100)  <<UK>>
  mo_ta           : VARCHAR(255)
  trang_thai      : VARCHAR(50)
}

' ==================== BẢNG NGƯỜI DÙNG ====================
entity "nguoidung" as nguoidung #E8EDF8 {
  * user_id           : INT           <<PK, AI>>
  --
  ma_so_dinh_danh     : VARCHAR(20)   <<UK>>
  ho_ten              : VARCHAR(150)
  email               : VARCHAR(150)  <<UK>>
  mat_khau            : VARCHAR(255)
  avatar              : VARCHAR(500)
  so_dien_thoai       : VARCHAR(20)   <<UK>>
  dia_chi             : VARCHAR(255)
  role_id             : INT           <<FK→vaitro>>
  loai_tai_khoan      : ENUM(SINH_VIEN, NHA_TAI_TRO)
  khoa_phong          : VARCHAR(100)
  trang_thai          : VARCHAR(50)
  created_at          : DATETIME
}

note right of nguoidung
  loai_tai_khoan:
  NULL        → admin, giao_vu, ke_toan
  SINH_VIEN   → sinh viên TVU
  NHA_TAI_TRO → nhà tài trợ
end note

' ==================== BẢNG TÀI KHOẢN NGÂN HÀNG ====================
entity "taikhoannganhang" as tknhang #E8F5E9 {
  * tai_khoan_id  : INT           <<PK, AI>>
  --
  user_id         : INT           <<FK→nguoidung>>
  so_tai_khoan    : VARCHAR(50)
  ten_ngan_hang   : VARCHAR(150)
  chu_tai_khoan   : VARCHAR(150)
  la_mac_dinh     : TINYINT(1)
  created_at      : DATETIME
}

note right of tknhang
  Chỉ SINH_VIEN mới có record
  la_mac_dinh = 1: tài khoản
  nhận giải ngân mặc định
end note

' ==================== BẢNG NHÀ TÀI TRỢ ====================
entity "nhataitro" as nhataitro #FFF8E7 {
  * nha_tai_tro_id    : INT           <<PK, AI>>
  --
  user_id             : INT           <<FK→nguoidung, UK>>
  ten_nha_tai_tro     : VARCHAR(150)
  loai                : VARCHAR(50)
  created_at          : DATETIME
}

note right of nhataitro
  loai: Ca nhan |
  Doanh nghiep |
  To chuc phi loi nhuan
end note

' ==================== BẢNG QUỸ ====================
entity "quy" as quy #E8EDF8 {
  * quy_id        : INT           <<PK, AI>>
  --
  ten_quy         : VARCHAR(150)
  loai_quy        : ENUM(Tu thien, Hoc bong,\nY te, Moi truong, Khac)
  mo_ta           : VARCHAR(255)
  so_du           : DECIMAL(18,2)
  ngay_tao        : DATETIME
  ngay_cap_nhat   : DATETIME
  trang_thai      : ENUM(Dang hoat dong,\nTam dung, Da dong)
}

' ==================== BẢNG KHOẢN TÀI TRỢ ====================
entity "khoantaitro" as khoantaitro #FFF8E7 {
  * khoan_tai_tro_id      : INT           <<PK, AI>>
  --
  nha_tai_tro_id          : INT           <<FK→nhataitro>>
  quy_id                  : INT           <<FK→quy>>
  so_tien                 : DECIMAL(18,2)
  hinh_anh_minh_chung     : VARCHAR(500)
  ngay_tai_tro            : DATETIME
  trang_thai              : ENUM(Cho duyet,\nDa nhan, Tu choi)
  ghi_chu                 : VARCHAR(255)
  ngay_cap_nhat           : DATETIME
}

' ==================== BẢNG YÊU CẦU HỖ TRỢ ====================
entity "yeucauhotro" as yeucauhotro #E8F5E9 {
  * request_id        : INT           <<PK, AI>>
  --
  user_id             : INT           <<FK→nguoidung>>
  quy_id              : INT           <<FK→quy>>
  tieu_de             : VARCHAR(200)
  mo_ta               : TEXT
  so_tien_yeu_cau     : DECIMAL(18,2)
  file_dinh_kem       : VARCHAR(500)
  trang_thai          : ENUM(Cho duyet, Dang xu ly,\nCho giai ngan, Da giai ngan, Tu choi)
  ly_do_tu_choi       : VARCHAR(255)
  ngay_tao            : DATETIME
  ngay_cap_nhat       : DATETIME
}

' ==================== BẢNG GIAO DỊCH ====================
entity "giaodich" as giaodich #FCE4EC {
  * transaction_id            : INT           <<PK, AI>>
  --
  quy_id                      : INT           <<FK→quy>>
  khoan_tai_tro_id            : INT           <<FK→khoantaitro, NULL>>
  request_id                  : INT           <<FK→yeucauhotro, NULL>>
  nguoi_tao_id                : INT           <<FK→nguoidung, NULL>>
  so_tien                     : DECIMAL(18,2)
  loai                        : ENUM(Thu, Chi)
  trang_thai                  : ENUM(Cho xu ly, Thanh cong,\nThat bai, Hoan tien)
  minh_chung_chuyen_khoan     : VARCHAR(500)
  ghi_chu                     : VARCHAR(255)
  ngay_giao_dich              : DATETIME
  ngay_cap_nhat               : DATETIME
}

note right of giaodich
  CHECK: khoan_tai_tro_id IS NOT NULL
  OR request_id IS NOT NULL
  (phải có ít nhất 1 nguồn)
end note

' ==================== BẢNG PHÊ DUYỆT ====================
entity "pheduyet" as pheduyet #FCE4EC {
  * phe_duyet_id  : INT           <<PK, AI>>
  --
  request_id      : INT           <<FK→yeucauhotro>>
  nguoi_duyet_id  : INT           <<FK→nguoidung>>
  cap_do_duyet    : INT           (1→5)
  ket_qua         : ENUM(Cho duyet, Da duyet,\nTu choi, Yeu cau bo sung)
  ghi_chu         : VARCHAR(255)
  ly_do_tu_choi   : VARCHAR(255)
  ngay_tao        : DATETIME
  ngay_duyet      : DATETIME
  ngay_cap_nhat   : DATETIME
}

' ==================== QUAN HỆ ====================

' vaitro → nguoidung (1 role - nhiều user)
vaitro ||--o{ nguoidung : "có role"

' nguoidung → taikhoannganhang (1 user - nhiều tài khoản NH)
nguoidung ||--o{ tknhang : "sở hữu"

' nguoidung → nhataitro (1 user - 0 hoặc 1 nhataitro)
nguoidung ||--o| nhataitro : "là nhà tài trợ"

' nhataitro → khoantaitro (1 NTT - nhiều khoản tài trợ)
nhataitro ||--o{ khoantaitro : "tạo"

' quy → khoantaitro (1 quỹ - nhiều khoản tài trợ)
quy ||--o{ khoantaitro : "nhận tài trợ"

' nguoidung → yeucauhotro (1 user - nhiều yêu cầu)
nguoidung ||--o{ yeucauhotro : "gửi"

' quy → yeucauhotro (1 quỹ - nhiều yêu cầu)
quy ||--o{ yeucauhotro : "tiếp nhận"

' quy → giaodich (1 quỹ - nhiều giao dịch)
quy ||--o{ giaodich : "phát sinh"

' khoantaitro → giaodich (1 khoản - 0 hoặc 1 giao dịch Thu)
khoantaitro |o--o| giaodich : "sinh giao dịch Thu"

' yeucauhotro → giaodich (1 yêu cầu - 0 hoặc 1 giao dịch Chi)
yeucauhotro |o--o| giaodich : "sinh giao dịch Chi"

' nguoidung → giaodich (người tạo giao dịch)
nguoidung |o--o{ giaodich : "tạo"

' yeucauhotro → pheduyet (1 yêu cầu - nhiều cấp duyệt)
yeucauhotro ||--o{ pheduyet : "được duyệt"

' nguoidung → pheduyet (người duyệt)
nguoidung ||--o{ pheduyet : "phê duyệt"

@enduml
